--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -11,13 +11,13 @@
     "file": "_app/immutable/assets/overleaf-e279a58b.webp",
     "src": "posts/latex-with-vscode/overleaf.webp"
   },
-  "posts/latex-with-vscode/options.webp": {
-    "file": "_app/immutable/assets/options-797cbfa5.webp",
-    "src": "posts/latex-with-vscode/options.webp"
-  },
   "posts/latex-with-vscode/git.webp": {
     "file": "_app/immutable/assets/git-569fad45.webp",
     "src": "posts/latex-with-vscode/git.webp"
+  },
+  "posts/latex-with-vscode/options.webp": {
+    "file": "_app/immutable/assets/options-797cbfa5.webp",
+    "src": "posts/latex-with-vscode/options.webp"
   },
   "PostsList.css": {
     "file": "_app/immutable/assets/PostsList-988031de.css",
@@ -31,46 +31,17 @@
     "file": "_app/immutable/assets/_page-49288d19.css",
     "src": "src/routes/posts/[[page]]/+page.css"
   },
-  "src/routes/about/+page.css": {
-    "file": "_app/immutable/assets/_page-bfc71f6a.css",
-    "src": "src/routes/about/+page.css"
+  "src/routes/+layout.css": {
+    "file": "_app/immutable/assets/_layout-b19f90b6.css",
+    "src": "src/routes/+layout.css"
   },
   "src/routes/post/[slug]/+page.css": {
     "file": "_app/immutable/assets/_page-3805f4c7.css",
     "src": "src/routes/post/[slug]/+page.css"
   },
-  "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-b19f90b6.css",
-    "src": "src/routes/+layout.css"
-  },
-  "_preload-helper-41c905a7.js": {
-    "file": "_app/immutable/chunks/preload-helper-41c905a7.js"
-  },
-  "src/routes/+layout.js": {
-    "file": "_app/immutable/modules/pages/_layout.js-9cbb603b.js",
-    "src": "src/routes/+layout.js",
-    "isEntry": true,
-    "imports": [
-      "__layout-da46b06b.js"
-    ]
-  },
-  "_info-523b83f0.js": {
-    "file": "_app/immutable/chunks/info-523b83f0.js"
-  },
-  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-1506b9bb.js",
-    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-998a520c.js",
-      "_singletons-e8597c0a.js"
-    ]
-  },
-  "_ArrowLeftIcon-fadd5b28.js": {
-    "file": "_app/immutable/chunks/ArrowLeftIcon-fadd5b28.js",
-    "imports": [
-      "_index-998a520c.js"
-    ]
+  "src/routes/about/+page.css": {
+    "file": "_app/immutable/assets/_page-bfc71f6a.css",
+    "src": "src/routes/about/+page.css"
   },
   ".svelte-kit/generated/nodes/3.js": {
     "file": "_app/immutable/chunks/3-9fae3650.js",
@@ -80,74 +51,35 @@
       "src/routes/about/+page.svelte"
     ]
   },
-  ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-6faa7124.js",
-    "src": ".svelte-kit/generated/nodes/2.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "src/routes/+page.svelte"
-    ]
-  },
-  "__layout-da46b06b.js": {
-    "file": "_app/immutable/chunks/_layout-da46b06b.js"
-  },
-  "src/routes/post/[slug]/+page.js": {
-    "file": "_app/immutable/modules/pages/post/_slug_/_page.js-5c022812.js",
-    "src": "src/routes/post/[slug]/+page.js",
-    "isEntry": true,
-    "imports": [
-      "_preload-helper-41c905a7.js",
-      "__page-a448cd7b.js"
-    ]
-  },
   ".svelte-kit/generated/nodes/4.js": {
-    "file": "_app/immutable/chunks/4-075bcfcc.js",
+    "file": "_app/immutable/chunks/4-d4212007.js",
     "src": ".svelte-kit/generated/nodes/4.js",
     "isDynamicEntry": true,
     "imports": [
       "src/routes/admin/+page.svelte"
     ]
   },
-  ".svelte-kit/generated/nodes/6.js": {
-    "file": "_app/immutable/chunks/6-fb81c405.js",
-    "src": ".svelte-kit/generated/nodes/6.js",
+  ".svelte-kit/generated/nodes/5.js": {
+    "file": "_app/immutable/chunks/5-e8c1f310.js",
+    "src": ".svelte-kit/generated/nodes/5.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-a448cd7b.js",
-      "src/routes/post/[slug]/+page.svelte"
+      "src/routes/admin.php/+page.svelte"
     ]
   },
-  "_SocialLinks-565642ce.js": {
-    "file": "_app/immutable/chunks/SocialLinks-565642ce.js",
+  "_singletons-e8597c0a.js": {
+    "file": "_app/immutable/chunks/singletons-e8597c0a.js",
     "imports": [
-      "_index-998a520c.js",
-      "_info-523b83f0.js"
+      "_index-998a520c.js"
     ]
   },
-  "src/routes/admin/+page.svelte": {
-    "file": "_app/immutable/components/pages/admin/_page.svelte-753bd89a.js",
-    "src": "src/routes/admin/+page.svelte",
+  "src/routes/post/[slug]/+page.js": {
+    "file": "_app/immutable/modules/pages/post/_slug_/_page.js-a8fb0b05.js",
+    "src": "src/routes/post/[slug]/+page.js",
     "isEntry": true,
     "imports": [
-      "_index-998a520c.js",
-      "_info-523b83f0.js"
-    ]
-  },
-  "src/routes/admin.php/+page.svelte": {
-    "file": "_app/immutable/components/pages/admin.php/_page.svelte-753bd89a.js",
-    "src": "src/routes/admin.php/+page.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-998a520c.js",
-      "_info-523b83f0.js"
-    ]
-  },
-  ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-ce715194.js",
-    "src": ".svelte-kit/generated/nodes/1.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
+      "_preload-helper-41c905a7.js",
+      "__page-2654cff9.js"
     ]
   },
   ".svelte-kit/generated/nodes/7.js": {
@@ -158,22 +90,79 @@
       "src/routes/posts/[[page]]/+page.svelte"
     ]
   },
-  ".svelte-kit/generated/nodes/5.js": {
-    "file": "_app/immutable/chunks/5-0b6bf478.js",
-    "src": ".svelte-kit/generated/nodes/5.js",
-    "isDynamicEntry": true,
+  "__layout-da46b06b.js": {
+    "file": "_app/immutable/chunks/_layout-da46b06b.js"
+  },
+  "src/routes/+layout.js": {
+    "file": "_app/immutable/modules/pages/_layout.js-9cbb603b.js",
+    "src": "src/routes/+layout.js",
+    "isEntry": true,
     "imports": [
-      "src/routes/admin.php/+page.svelte"
+      "__layout-da46b06b.js"
     ]
   },
-  "_PostsList-c2f76d1b.js": {
-    "file": "_app/immutable/chunks/PostsList-c2f76d1b.js",
+  ".svelte-kit/generated/nodes/1.js": {
+    "file": "_app/immutable/chunks/1-ce715194.js",
+    "src": ".svelte-kit/generated/nodes/1.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
+    ]
+  },
+  "_info-523b83f0.js": {
+    "file": "_app/immutable/chunks/info-523b83f0.js"
+  },
+  "_ArrowLeftIcon-fadd5b28.js": {
+    "file": "_app/immutable/chunks/ArrowLeftIcon-fadd5b28.js",
+    "imports": [
+      "_index-998a520c.js"
+    ]
+  },
+  "_SocialLinks-565642ce.js": {
+    "file": "_app/immutable/chunks/SocialLinks-565642ce.js",
     "imports": [
       "_index-998a520c.js",
-      "_PostDate-2c42476a.js"
+      "_info-523b83f0.js"
+    ]
+  },
+  "src/routes/admin/+page.svelte": {
+    "file": "_app/immutable/components/pages/admin/_page.svelte-6c17be99.js",
+    "src": "src/routes/admin/+page.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-998a520c.js",
+      "_info-523b83f0.js"
+    ]
+  },
+  "src/routes/posts/[[page]]/+page.svelte": {
+    "file": "_app/immutable/components/pages/posts/__page__/_page.svelte-c3d5dcdd.js",
+    "src": "src/routes/posts/[[page]]/+page.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-998a520c.js",
+      "_info-523b83f0.js",
+      "_ArrowLeftIcon-fadd5b28.js",
+      "_PostsList-c2f76d1b.js"
     ],
     "css": [
-      "_app/immutable/assets/PostsList-988031de.css"
+      "_app/immutable/assets/_page-49288d19.css"
+    ]
+  },
+  ".svelte-kit/generated/nodes/2.js": {
+    "file": "_app/immutable/chunks/2-6faa7124.js",
+    "src": ".svelte-kit/generated/nodes/2.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "src/routes/+page.svelte"
+    ]
+  },
+  "src/routes/admin.php/+page.svelte": {
+    "file": "_app/immutable/components/pages/admin.php/_page.svelte-6c17be99.js",
+    "src": "src/routes/admin.php/+page.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-998a520c.js",
+      "_info-523b83f0.js"
     ]
   },
   ".svelte-kit/generated/nodes/0.js": {
@@ -183,6 +172,16 @@
     "imports": [
       "__layout-da46b06b.js",
       "src/routes/+layout.svelte"
+    ]
+  },
+  "__page-2654cff9.js": {
+    "file": "_app/immutable/chunks/_page-2654cff9.js",
+    "imports": [
+      "_preload-helper-41c905a7.js"
+    ],
+    "dynamicImports": [
+      "posts/going-fast-with-go/index.md",
+      "posts/latex-with-vscode/index.md"
     ]
   },
   "src/routes/+page.svelte": {
@@ -197,47 +196,6 @@
     ],
     "css": [
       "_app/immutable/assets/_page-800db38c.css"
-    ]
-  },
-  "__page-a448cd7b.js": {
-    "file": "_app/immutable/chunks/_page-a448cd7b.js",
-    "imports": [
-      "_preload-helper-41c905a7.js"
-    ],
-    "dynamicImports": [
-      "posts/latex-with-vscode/index.md"
-    ]
-  },
-  "src/routes/about/+page.svelte": {
-    "file": "_app/immutable/components/pages/about/_page.svelte-82d8cdf2.js",
-    "src": "src/routes/about/+page.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-998a520c.js",
-      "_info-523b83f0.js"
-    ],
-    "css": [
-      "_app/immutable/assets/_page-bfc71f6a.css"
-    ]
-  },
-  "_index-998a520c.js": {
-    "file": "_app/immutable/chunks/index-998a520c.js"
-  },
-  "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-a9fb7042.js",
-    "src": "src/routes/+layout.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-998a520c.js"
-    ],
-    "css": [
-      "_app/immutable/assets/_layout-b19f90b6.css"
-    ]
-  },
-  "_singletons-e8597c0a.js": {
-    "file": "_app/immutable/chunks/singletons-e8597c0a.js",
-    "imports": [
-      "_index-998a520c.js"
     ]
   },
   "posts/latex-with-vscode/index.md": {
@@ -255,24 +213,39 @@
       "_app/immutable/assets/git-569fad45.webp"
     ]
   },
-  "src/routes/posts/[[page]]/+page.svelte": {
-    "file": "_app/immutable/components/pages/posts/__page__/_page.svelte-c3d5dcdd.js",
-    "src": "src/routes/posts/[[page]]/+page.svelte",
+  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
+    "file": "_app/immutable/components/error.svelte-1506b9bb.js",
+    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
       "_index-998a520c.js",
-      "_info-523b83f0.js",
-      "_ArrowLeftIcon-fadd5b28.js",
-      "_PostsList-c2f76d1b.js"
-    ],
-    "css": [
-      "_app/immutable/assets/_page-49288d19.css"
+      "_singletons-e8597c0a.js"
     ]
   },
-  "_PostDate-2c42476a.js": {
-    "file": "_app/immutable/chunks/PostDate-2c42476a.js",
+  "src/routes/+layout.svelte": {
+    "file": "_app/immutable/components/pages/_layout.svelte-a9fb7042.js",
+    "src": "src/routes/+layout.svelte",
+    "isEntry": true,
     "imports": [
       "_index-998a520c.js"
+    ],
+    "css": [
+      "_app/immutable/assets/_layout-b19f90b6.css"
+    ]
+  },
+  "_index-998a520c.js": {
+    "file": "_app/immutable/chunks/index-998a520c.js"
+  },
+  "_preload-helper-41c905a7.js": {
+    "file": "_app/immutable/chunks/preload-helper-41c905a7.js"
+  },
+  ".svelte-kit/generated/nodes/6.js": {
+    "file": "_app/immutable/chunks/6-f8925350.js",
+    "src": ".svelte-kit/generated/nodes/6.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__page-2654cff9.js",
+      "src/routes/post/[slug]/+page.svelte"
     ]
   },
   "src/routes/post/[slug]/+page.svelte": {
@@ -291,8 +264,38 @@
       "_app/immutable/assets/_page-3805f4c7.css"
     ]
   },
+  "src/routes/about/+page.svelte": {
+    "file": "_app/immutable/components/pages/about/_page.svelte-82d8cdf2.js",
+    "src": "src/routes/about/+page.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-998a520c.js",
+      "_info-523b83f0.js"
+    ],
+    "css": [
+      "_app/immutable/assets/_page-bfc71f6a.css"
+    ]
+  },
+  "posts/going-fast-with-go/index.md": {
+    "file": "_app/immutable/chunks/index-6f8c9490.js",
+    "src": "posts/going-fast-with-go/index.md",
+    "isDynamicEntry": true,
+    "imports": [
+      "_index-998a520c.js"
+    ]
+  },
+  "_PostsList-c2f76d1b.js": {
+    "file": "_app/immutable/chunks/PostsList-c2f76d1b.js",
+    "imports": [
+      "_index-998a520c.js",
+      "_PostDate-2c42476a.js"
+    ],
+    "css": [
+      "_app/immutable/assets/PostsList-988031de.css"
+    ]
+  },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-aa93bf10.js",
+    "file": "_app/immutable/start-67a81025.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
@@ -309,6 +312,12 @@
       ".svelte-kit/generated/nodes/5.js",
       ".svelte-kit/generated/nodes/6.js",
       ".svelte-kit/generated/nodes/7.js"
+    ]
+  },
+  "_PostDate-2c42476a.js": {
+    "file": "_app/immutable/chunks/PostDate-2c42476a.js",
+    "imports": [
+      "_index-998a520c.js"
     ]
   }
 }
