--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"deploy": "touch build/.nojekyll && echo 'rcpassos.me' > ./build/CNAME && gh-pages -d build -t true",
+		"deploy-gh-pages": "touch build/.nojekyll && echo 'rcpassos.me' > ./build/CNAME && gh-pages -d build -t true",
 		"preview": "vite preview",
 		"check": "svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./jsconfig.json --watch",
@@ -13,32 +13,32 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^2.0.1",
-		"@sveltejs/kit": "^1.8.3",
+		"@sveltejs/kit": "^1.15.0",
 		"@tailwindcss/typography": "^0.5.9",
 		"@vcarl/remark-headings": "^0.1.0",
-		"autoprefixer": "^10.4.13",
+		"autoprefixer": "^10.4.14",
 		"cssnano": "^5.1.15",
-		"eslint": "^8.34.0",
-		"eslint-config-prettier": "^8.6.0",
+		"eslint": "^8.37.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"gh-pages": "^5.0.0",
 		"mdsvex": "^0.10.6",
 		"mdsvex-relative-images": "^1.0.3",
 		"postcss": "^8.4.21",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.8.4",
-		"prettier-plugin-svelte": "^2.9.0",
+		"prettier": "^2.8.7",
+		"prettier-plugin-svelte": "^2.10.0",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-slug": "^5.1.0",
 		"remark-reading-time": "^2.0.1",
-		"sass": "^1.58.3",
-		"svelte": "^3.55.1",
-		"svelte-check": "^3.0.3",
-		"svelte-preprocess": "^5.0.1",
-		"tailwindcss": "^3.2.7",
+		"sass": "^1.60.0",
+		"svelte": "^3.58.0",
+		"svelte-check": "^3.1.4",
+		"svelte-preprocess": "^5.0.3",
+		"tailwindcss": "^3.3.1",
 		"typescript": "^4.9.5",
 		"unist-util-visit": "^4.1.2",
-		"vite": "^4.1.4"
+		"vite": "^4.2.1"
 	},
 	"type": "module",
 	"dependencies": {
@@ -47,6 +47,6 @@
 		"heroicons-svelte": "^0.0.1",
 		"node-html-parser": "^6.1.5",
 		"reading-time": "^1.5.0",
-		"reading-time-estimator": "^1.7.2"
+		"reading-time-estimator": "^1.8.1"
 	}
 }
