--- a/package.json
+++ b/package.json
@@ -1,52 +1,54 @@
 {
-	"name": "rcpassos.me",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"deploy-gh-pages": "touch build/.nojekyll && echo 'rcpassos.me' > ./build/CNAME && gh-pages -d build -t true",
-		"preview": "vite preview",
-		"check": "svelte-check --tsconfig ./jsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./jsconfig.json --watch",
-		"lint": "prettier --check . && eslint --ignore-path .gitignore .",
-		"format": "prettier --write ."
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-static": "^2.0.2",
-		"@sveltejs/kit": "^1.16.2",
-		"@tailwindcss/typography": "^0.5.9",
-		"@vcarl/remark-headings": "^0.1.0",
-		"autoprefixer": "^10.4.14",
-		"cssnano": "^6.0.1",
-		"eslint": "^8.40.0",
-		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"gh-pages": "^5.0.0",
-		"mdsvex": "^0.10.6",
-		"mdsvex-relative-images": "^1.0.3",
-		"postcss": "^8.4.23",
-		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.0",
-		"rehype-autolink-headings": "^6.1.1",
-		"rehype-slug": "^5.1.0",
-		"remark-reading-time": "^2.0.1",
-		"sass": "^1.62.1",
-		"svelte": "^3.59.0",
-		"svelte-check": "^3.3.1",
-		"svelte-preprocess": "^5.0.3",
-		"tailwindcss": "^3.3.2",
-		"typescript": "^5.0.4",
-		"unist-util-visit": "^4.1.2",
-		"vite": "^4.3.5"
-	},
-	"type": "module",
-	"dependencies": {
-		"clsx": "^1.2.1",
-		"date-fns": "^2.30.0",
-		"heroicons-svelte": "^0.0.1",
-		"node-html-parser": "^6.1.5",
-		"reading-time": "^1.5.0",
-		"reading-time-estimator": "^1.8.1"
-	}
+  "name": "rcpassos.me",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "deploy-gh-pages": "touch build/.nojekyll && echo 'rcpassos.me' > ./build/CNAME && gh-pages -d build -t true",
+    "preview": "vite preview",
+    "check": "svelte-check --tsconfig ./jsconfig.json",
+    "check:watch": "svelte-check --tsconfig ./jsconfig.json --watch",
+    "lint": "prettier --check . && eslint --ignore-path .gitignore .",
+    "format": "prettier --write ."
+  },
+  "devDependencies": {
+    "@floating-ui/dom": "^1.2.7",
+    "@skeletonlabs/skeleton": "^1.5.1",
+    "@sveltejs/adapter-static": "^2.0.2",
+    "@sveltejs/kit": "^1.16.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "@vcarl/remark-headings": "^0.1.0",
+    "autoprefixer": "^10.4.14",
+    "cssnano": "^6.0.1",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "gh-pages": "^5.0.0",
+    "mdsvex": "^0.10.6",
+    "mdsvex-relative-images": "^1.0.3",
+    "postcss": "^8.4.23",
+    "postcss-load-config": "^4.0.1",
+    "prettier": "^2.8.8",
+    "prettier-plugin-svelte": "^2.10.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.1.0",
+    "remark-reading-time": "^2.0.1",
+    "sass": "^1.62.1",
+    "svelte": "^3.59.1",
+    "svelte-check": "^3.3.2",
+    "svelte-preprocess": "^5.0.3",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4",
+    "unist-util-visit": "^4.1.2",
+    "vite": "^4.3.5"
+  },
+  "type": "module",
+  "dependencies": {
+    "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
+    "heroicons-svelte": "^0.0.1",
+    "node-html-parser": "^6.1.5",
+    "reading-time": "^1.5.0",
+    "reading-time-estimator": "^1.8.1"
+  }
 }
