--- a/package.json
+++ b/package.json
@@ -9,33 +9,34 @@
     "check": "svelte-check --tsconfig ./jsconfig.json",
     "check:watch": "svelte-check --tsconfig ./jsconfig.json --watch",
     "lint": "prettier --check . && eslint --ignore-path .gitignore .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "update": "npx npm-check-updates -u"
   },
   "devDependencies": {
     "@skeletonlabs/skeleton": "^1.6.2",
     "@sveltejs/adapter-static": "^2.0.2",
-    "@sveltejs/kit": "^1.19.0",
+    "@sveltejs/kit": "^1.20.0",
     "@tailwindcss/typography": "^0.5.9",
     "@vcarl/remark-headings": "^0.1.0",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.1",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-svelte3": "^4.0.0",
+    "eslint-plugin-svelte": "^2.29.0",
     "gh-pages": "^5.0.0",
     "mdsvex": "^0.10.6",
     "mdsvex-relative-images": "^1.0.3",
-    "postcss": "^8.4.23",
+    "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.8",
-    "prettier-plugin-svelte": "^2.10.0",
+    "prettier-plugin-svelte": "^2.10.1",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "^5.1.0",
     "remark-reading-time": "^2.0.1",
     "sass": "^1.62.1",
     "svelte": "^3.59.1",
-    "svelte-check": "^3.3.2",
-    "svelte-preprocess": "^5.0.3",
+    "svelte-check": "^3.4.3",
+    "svelte-preprocess": "^5.0.4",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4",
     "unist-util-visit": "^4.1.2",
@@ -45,7 +46,6 @@
   "dependencies": {
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
-    "heroicons-svelte": "^0.0.1",
     "node-html-parser": "^6.1.5",
     "reading-time": "^1.5.0",
     "reading-time-estimator": "^1.8.1"
