--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-.DS_Store
 node_modules
-.svelte-kit
-.vercel
 /build
-/public
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
