--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,12 @@
-.cache
-package.json
+node_modules
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+
+# Ignore files for PNPM, NPM and YARN
+pnpm-lock.yaml
 package-lock.json
-public
+yarn.lock
