--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "rcpassos.me",
 	"version": "0.2.0",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --host",
 		"build": "vite build",
 		"deploy-gh-pages": "touch build/.nojekyll && echo 'rcpassos.me' > ./build/CNAME && gh-pages -d build -t true",
 		"preview": "vite preview",
@@ -13,42 +13,42 @@
 		"update": "npx npm-check-updates -u"
 	},
 	"devDependencies": {
-		"@skeletonlabs/skeleton": "2.7.1",
+		"@skeletonlabs/skeleton": "2.9.0",
 		"@skeletonlabs/tw-plugin": "0.3.1",
 		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "^2.4.3",
+		"@sveltejs/kit": "^2.5.4",
 		"@tailwindcss/typography": "^0.5.10",
 		"@vcarl/remark-headings": "^0.1.0",
-		"autoprefixer": "^10.4.17",
-		"cssnano": "^6.0.3",
-		"eslint": "^8.56.0",
+		"autoprefixer": "^10.4.18",
+		"cssnano": "^6.1.0",
+		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
 		"gh-pages": "^6.1.1",
 		"mdsvex": "^0.11.0",
 		"mdsvex-relative-images": "^1.0.3",
-		"postcss": "^8.4.33",
-		"postcss-load-config": "^5.0.2",
-		"prettier": "^3.2.4",
-		"prettier-plugin-svelte": "^3.1.2",
+		"postcss": "^8.4.36",
+		"postcss-load-config": "^5.0.3",
+		"prettier": "^3.2.5",
+		"prettier-plugin-svelte": "^3.2.2",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
 		"remark-reading-time": "^2.0.1",
-		"sass": "^1.70.0",
-		"svelte": "^4.2.9",
-		"svelte-check": "^3.6.3",
+		"sass": "^1.72.0",
+		"svelte": "^4.2.12",
+		"svelte-check": "^3.6.7",
 		"svelte-preprocess": "^5.1.3",
 		"tailwindcss": "^3.4.1",
 		"unist-util-visit": "^5.0.0",
-		"vite": "^5.0.12",
+		"vite": "^5.1.6",
 		"vite-plugin-tailwind-purgecss": "0.2.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"clsx": "^2.1.0",
-		"date-fns": "^3.3.1",
+		"date-fns": "^3.6.0",
 		"node-html-parser": "^6.1.12",
 		"reading-time": "^1.5.0",
-		"reading-time-estimator": "^1.9.4"
+		"reading-time-estimator": "^1.10.0"
 	}
 }
