--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
 		"@skeletonlabs/skeleton": "2.9.0",
 		"@skeletonlabs/tw-plugin": "0.3.1",
 		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "^2.5.4",
-		"@tailwindcss/typography": "^0.5.10",
+		"@sveltejs/kit": "^2.5.5",
+		"@tailwindcss/typography": "^0.5.12",
 		"@vcarl/remark-headings": "^0.1.0",
 		"autoprefixer": "^10.4.19",
-		"cssnano": "^6.1.1",
+		"cssnano": "^6.1.2",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
@@ -36,19 +36,20 @@
 		"remark-reading-time": "^2.0.1",
 		"sass": "^1.72.0",
 		"svelte": "^4.2.12",
-		"svelte-check": "^3.6.8",
+		"svelte-check": "^3.6.9",
 		"svelte-preprocess": "^5.1.3",
-		"tailwindcss": "^3.4.1",
+		"tailwindcss": "^3.4.3",
 		"unist-util-visit": "^5.0.0",
-		"vite": "^5.2.3",
+		"vite": "^5.2.7",
 		"vite-plugin-tailwind-purgecss": "0.2.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"clsx": "^2.1.0",
 		"date-fns": "^3.6.0",
-		"node-html-parser": "^6.1.12",
+		"node-html-parser": "^6.1.13",
 		"reading-time": "^1.5.0",
 		"reading-time-estimator": "^1.10.0"
-	}
+	},
+	"packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
