--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"rehype-slug": "^6.0.0",
 		"remark-reading-time": "^2.0.1",
 		"sass": "^1.75.0",
+		"shiki": "^1.3.0",
 		"svelte": "^4.2.15",
 		"svelte-check": "^3.6.9",
 		"svelte-preprocess": "^5.1.4",
