--- a/package.json
+++ b/package.json
@@ -13,44 +13,40 @@
 		"update": "npx npm-check-updates -u"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^3.0.4",
-		"@sveltejs/kit": "^2.5.26",
-		"@tailwindcss/typography": "^0.5.16",
-		"@skeletonlabs/skeleton": "2.10.4",
-		"@skeletonlabs/tw-plugin": "0.4.1",
+		"@eslint/compat": "^1.2.5",
+		"@eslint/js": "^9.18.0",
+		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/kit": "^2.5.27",
+		"@sveltejs/vite-plugin-svelte": "^6.0.0",
+		"@tailwindcss/typography": "^0.5.15",
+		"@tailwindcss/vite": "^4.0.0",
 		"@vcarl/remark-headings": "^0.1.0",
-		"autoprefixer": "^10.4.21",
-		"cssnano": "^7.0.7",
-		"eslint": "^9.10.0",
-		"eslint-config-prettier": "^9.1.2",
-		"eslint-plugin-svelte": "^2.43.0",
-		"gh-pages": "^6.1.1",
-		"mdsvex": "^0.12.6",
-		"mdsvex-relative-images": "^1.0.3",
-		"postcss": "^8.4.49",
-		"postcss-load-config": "^6.0.1",
-		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.8",
+		"daisyui": "^5.0.46",
+		"eslint": "^9.18.0",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-svelte": "^3.0.0",
+		"globals": "^16.0.0",
+		"mdsvex": "^0.12.3",
+		"mdsvex-relative-images": "^2.0.0",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
-		"remark-reading-time": "^2.0.2",
-		"sass": "^1.78.0",
-		"tailwindcss": "^3.4.17",
-		"shiki": "^1.16.3",
-		"svelte": "^4.2.20",
-		"svelte-check": "^4.0.9",
-		"svelte-preprocess": "^6.0.3",
-		"unist-util-visit": "^5.0.0",
-		"vite": "^5.4.19",
-		"vite-plugin-tailwind-purgecss": "0.3.5"
+		"shiki": "^3.8.1",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"tailwindcss": "^4.0.0",
+		"typescript": "^5.5.0",
+		"node-html-parser": "^7.0.1",
+		"vite": "^7.0.4"
 	},
 	"type": "module",
 	"dependencies": {
 		"clsx": "^2.1.1",
-		"date-fns": "^3.6.0",
-		"node-html-parser": "^6.1.13",
+		"date-fns": "^4.1.0",
 		"reading-time": "^1.5.0",
-		"reading-time-estimator": "^1.11.0"
+		"reading-time-estimator": "^1.14.0"
 	},
 	"packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
